--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.9'
 services:
   web:
-    build: .
+    build:
+      context: .
+      target: runner
     ports:
       - '3000:3000'
-    volumes:
-      - .:/app
-    command: pnpm dev
